chore: Ignore files for small library testing.

--- a/small_library/.gitignore
+++ b/small_library/.gitignore
@@ -1,3 +1,11 @@
 /1AugustusResGestaeI.txt
 /1Catullus.txt
 /1LIBERDECAESARIBUS.txt
+/3CurtiusRufusHistoriaeAlexandriMagniIV.txt
+/3EPITOMEDECAESARIBUS.txt
+/4CiceroadQuintumFratremIII.txt
+/4CicerodeLegeAgrariaIII.txt
+/4CurtiusRufusHistoriaeAlexandriMagniV.txt
+/4EPITOMEDECAESARIBUS.txt
+/4PlinytheYounger.txt
+/5CaesarBellumGallicumI.txt
